css/main.css
/* ... */
.tna_brand img {
    width: 100%;
    max-width: 288px !important;
}
.tna_brand a {
    border:0;
}

.about-page {
    text-align: right;
}

.placeholder {
    background-color: #ddd;
    width: 100%;
    height: 250px;
    min-height: 200px;
    text-align: center;
    margin-top: 10px;
}

.feature-image {
    margin-bottom: 1em;
}

/* hr
===================================*/

hr, .hr {
    width: 100%;
    background: #5a6434;
    height: 2px;
    border: 0px;
    margin-bottom: 5px;
    margin-top:0;
}

.info hr {
    color:#5a6434;

}

.gr__hfront .intro,
.gr__hfront .overlay {
    display:none;
}
/* columns
===================================*/

.content-columns {
    /*    -webkit-column-count: 1;
        -moz-column-count: 1;
        column-count: 1;
        -webkit-column-width: 98%;
        -moz-column-width: 98%;
        column-width: 98%;*/
}

/* borders
===================================*/

.border-none {
    border: none !important;
}

/* clear fixes
===================================*/

.clear-both {

    clear: both;
}

.clear-space {
    clear: both;
    height: 10px;
}

/* floats & alignments
===================================*/

.float-left {
    float: left !important;
}

.float-right {
    float: right !important;
}

.alignright {
    float: right !important;
    margin-left: 10px;
}

.alignleft {
    float: left !important;
    margin-right: 10px;
}

.text-left {

    text-align: left;
}

.text-right {

    text-align: right;
}

.text-center {

    text-align: center;
}

/* padding and margins
===================================*/

.padding {
    padding: 10px !important;
}

.padding-left-extra {
    padding-left: 15px !important;
}

.padding-left-small {
    padding-left: 5px !important;
}

.padding-right-small {
    padding-right: 5px !important;
}

.padding-extra-big {
    padding: 15px !important;
}

.padding-top-extra {
    padding-top: 15px !important;
}

.padding-top-small {
    padding-top: 5px !important;
}

.padding-bottom-small {
    padding-bottom: 5px !important;
}

/* zoom viewer (for documents)
===================================*/

.canvas-viewer {
    position: relative;
    width: 4000px;
    height: 3000px;
    overflow: hidden;
    cursor: move;
    z-index: 1000;
    margin-right: auto;
    margin-left: auto;
    background-image: url("../images/tna-wharton-background-v4-placeholder.jpg");
    background-repeat:no-repeat;
    background-size: 100% auto;
}

.main_background {
    position: relative;
    width: 4000px;
    height: 3000px;
    overflow: hidden;
    cursor: move;
    z-index: 999;
}

.main_background div img {
    height:100%;
}

/* Zoom */
.map-zoom{
    position: fixed;
    bottom:10px;
    left: 10px;
    padding:10px;
    z-index: 99999;
    color: #fff;
    cursor: pointer;font-size: 2em;
    background-color: rgba(0, 0,0, 0.52);
    display: none;
}
.map-zoom .fa-plus, .map-zoom .fa-minus{

    background-color: #000;
    padding: 5px;
}
    /* Learn more */

.learn_more_wrap {
    position:fixed;
    bottom:10px;
    z-index:9999;
    right:0;
    display:block;
    text-align:center;
    height: 101px;
    display:none;


}
.learn_more {
    background:#faf8d6;
    display:inline-block;
    float:left;
    padding:10px 20px;
    box-sizing:border-box;
    height:inherit;
    font-size:1.3em;
    position:relative;
    z-index:23;
    line-height:1.2em;
}
.learn_more_close {
    background:#e9e7c8;
    display:inline-block;
    position:relative;
    z-index:24;
    float:right;
    height:inherit;
    padding:5px;
    box-sizing:border-box;
    -webkit-box-shadow: inset 3px 0px 5px -2px rgba(199,196,155,1);
    -moz-box-shadow: inset 3px 0px 5px -2px rgba(199,196,155,1);
    box-shadow: inset 3px 0px 5px -2px rgba(199,196,155,1);
}
.learn_more_close .fa-angle-left,
.learn_more_close .fa-times {
    margin:28px 3px 3px 3px;
    color:#5a6434;
}
.learn_more_close .fa-angle-left:hover,
.learn_more_close .fa-times:hover {
    cursor:pointer;
}

.learn_more .button {
    display:block;
    text-align:center;
}
.slideRight {

}
/* markers
===================================*/
a.marker, .marker-secret {
    width: auto;
    height: auto;
    padding:6px 6px 3px 6px;
    /*background: url("../images/tna-wharton-marker.png");*/
    /*background-repeat: no-repeat;*/
    /*background-size: 100%;*/
    position: absolute;
    /*-webkit-animation: pulse 1s linear infinite;*/
    /*animation: pulse 1s linear infinite;*/
    cursor: pointer;
    border-bottom:none !important;
    z-index:1001;
    background-color: #fff;
    color:#000;
    font-size:2em;
    /*box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);*/
}
a.marker:hover{
    -webkit-animation: pulse 1s linear infinite;
    animation: pulse 1s linear infinite;
}
a.marker:visited{
  color: #95A5A6;
}
a.marker::after{
    content: "\f0d7";
font-family: FontAwesome;
    color:#fff;
    position: absolute;
    bottom:-15px;
    right:50%;
    font-size: 2em;

}
.canvas-viewer a:focus{
    border:2px solid #e67e22 !important;
}

.marker-secret {

    background-image: none !important;
}


#children {
    top:62%;
    left: 33%;
}

#munitions-factory {
    top:49.5%;
    right: 33.6%;
}


#child-labour {
    top:28.5%;
    right: 42.6%;
}

#forest {
    top:8.5%;
    right: 35.6%;
}
#industrial-action {
    top: 64%;
    right: 42%;
}
#munitions-workers {
    top: 53%;
    right: 40%;
}


#enemy-action {
    top: 40%;
    right: 35.1%;
}

#land {
    top: 27%;
    right: 71%;
}

#shop {
    top: 51.6%;
    left: 42.3%;
}


#houses {
    top: 46.6%;
    left: 24.7%;
}


#eggtrain {
    top: 80%;
    left: 11%;
}

#propaganda {
    top: 40%;
    left: 46.2%;
    width: 120px;
    height: 70px;
}

#scouts{
    top: 83.3%;
    left: 5.7%;
}
.characters {

    text-align: center;
}

.characters img {
    width: 100%;
    max-width: 390px;
}
/* ... */

